Add keyrest to ruby2_keywords parameters [Bug #18011]